traces/bug_157.txt
examples++-mpi/hips_FreeFem.cpp:146: error: DEAD_STORE
  The value written to &ki (type int*) is never used.
Showing all 1 steps of the trace


examples++-mpi/hips_FreeFem.cpp:146:2: Write of unused value
144.       for (i=0; i<n; i++) {
145.   	kr = &(AAv[pr[i]]);
146.   	ki = &(pr[i]);
        ^
147.   	if (nrm == 0) {
148.   	    for (k=pr[i]; k<pr[i+1]; k++) {
